# quickscope

./: .flake8  .flaskenv  .gitignore  CODEOWNERS  LICENSE  README.md  pyproject.toml  pytest.ini  quickscope.ini  requirements.txt
.github/workflows/: main.yml
docs/: api.rst  conf.py  index.rst  javaengine-guide.md  requirements.txt
docs/guides/: gradescope-setup.md  gradescope-student-results.md  gradescope-student-submission-guide.md  gradescope-student-understand-results.md  gradescope-style-marking-guide.md  guides.rst  javaengine-guide.md  pythonengine-guide.md
docs/quickscope/: modules.rst  quickscope.rst  quickscope.server.rst
quickscope/: build.py  wsgi.py
quickscope/gui/: .babelrc  package.json  webpack.config.js
quickscope/gui/src/: index.html  index.js
quickscope/gui/src/components/: App.js  Form.js  Header.js  JavaForm.js  PythonForm.js
quickscope/server/: __init__.py  bundle.py  config.py  produce.py  routes.py  run.py  templates.py  utils.py
quickscope/templates/: config.yml  run_autograder  setup.sh  testrunner.py
test/: test_sample.py
