[tool.poetry]
name = "quickscope"
version = "0.1.0"
description = "Build Gradescope Autograders with Chalkbox"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
python-dotenv = "^0.14.0"
jinja2 = "^2.11.2"
requests = "^2.24.0"
flask_cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.poetry.scripts]
build = "quickscope.build:build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
