[tool.poetry]
name = "quickscope"
version = "0.1.0"
description = "Build Gradescope Autograders with Chalkbox"
authors = ["Nicholas Lambourne <dev@ndl.im>, Max Miller <me@maxcmiller.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.14.0"
jinja2 = "^2.11.2"
requests = "^2.24.0"
flask_cors = "^3.0.9"
PyYAML = "^5.3.1"
uWSGI = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
Sphinx = "^3.2.1"
recommonmark = "^0.6.0"
sphinx-autodoc-typehints = "^1.11.1"
edx-sphinx-theme = "^1.5.0"
sphinx-rtd-theme = "^0.5.0"
flake8 = "^3.8.4"
m2r2 = "^0.2.5"

[tool.poetry.scripts]
build = "quickscope.build:build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
